<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="347dp"
        android:layout_height="268dp"
        android:src="@drawable/images" />

    <TextView
        android:id="@+id/answer_text_view"
        android:text="@string/my_test_question_1"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="34dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/true_button"
            android:text="@string/true_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/false_button"
            android:text="@string/false_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="73dp"
            android:layout_height="51dp"
            android:layout_marginTop="6dp"
            android:background="@color/wc"
            android:contentDescription="@string/next_text"
            android:src="@drawable/back_previous_arrow_left_19320"
            android:text="@string/previous_button" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="73dp"
            android:layout_height="51dp"
            android:layout_marginTop="6dp"
            android:background="@color/wc"
            android:contentDescription="@string/last_text"
            android:hapticFeedbackEnabled="false"
            android:src="@drawable/next_arrow_right_19326"
            android:text="@string/next_text"
            android:tint="@android:color/transparent" />


    </LinearLayout>






</LinearLayout>